--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "cleave.js": "^1.6.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-redux": "^9.2.0",
