--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "cleave.js": "^1.6.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "react": "^19.0.0",
